# xdbm

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: .storages.rs.rustfmt  backups.rs  cmd_args.rs  cmd_backup.rs  cmd_check.rs  cmd_completion.rs  cmd_init.rs  cmd_options.rs  cmd_status.rs  cmd_storage.rs  cmd_sync.rs  devices.rs  git.rs  inquire_filepath_completer.rs  main.rs  storages.rs  util.rs
src/storages/: directory.rs  local_info.rs  online_storage.rs  physical_drive_partition.rs
tests/: cli.rs
