[package]
name = "xdbm"
version = "0.2.1"
authors = ["qwjyh <urataw421@gmail.com>"]
edition = "2021"
description = "Cross device backup manager, which manages backups on several storages mounted on multiple devices."
readme = "README.md"
homepage = "https://github.com/qwjyh/xdbm"
repository = "https://github.com/qwjyh/xdbm"
license = "MIT OR Apache-1.0"
keywords = ["cli", "backup"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.0", features = ["cargo", "derive"] }
sysinfo = { version = "0.30", features = ["serde"] }
log = "0.4"
clap-verbosity-flag = "2.2"
clap_complete = "4.5"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11.3"
inquire = "0.7.5"
git2 = "0.19"
dirs = "5.0"
dunce = "1.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
byte-unit = "5.1.4"
anyhow = "1.0"
pathdiff = "0.2.1"
unicode-width = "0.1.13"

[dev-dependencies]
assert_cmd = "2.0.14"
assert_fs = "1.1.1"
predicates = "3.1.0"
