[package]
name = "xdbm"
version = "0.4.0"
authors = ["qwjyh <urataw421@gmail.com>"]
edition = "2024"
description = "Cross device backup manager, which manages backups on several storages mounted on multiple devices."
readme = "README.md"
homepage = "https://github.com/qwjyh/xdbm"
repository = "https://github.com/qwjyh/xdbm"
license = "MIT OR Apache-1.0"
keywords = ["cli", "backup"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["cargo", "derive"] }
sysinfo = { version = "0.38", features = ["serde"] }
log = "0.4"
clap-verbosity-flag = "3.0"
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11.5"
inquire = "0.9"
git2 = "0.20"
dirs = "6.0"
dunce = "1.0.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
byte-unit = "5.1"
anyhow = "1.0"
pathdiff = "0.2.3"
unicode-width = "0.2.0"
console = "0.16"

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
predicates = "3.1.2"

[features]
vendored-openssl = ["git2/vendored-openssl"]
